--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.js"></script>
     <title>Rock, Paper, Scissors!</title>
+    <button id="rock-btn">Rock</button>
+    <button id="paper-btn">Paper</button>
+    <button id="scissors-btn">Scissors</button>
 </head>
 <body>
     
