--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -13,5 +13,6 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
+    <div id="result"></div>
 </body>
 </html>
