--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -14,5 +14,6 @@
         <button id="scissors">Scissors</button>
     </div>
     <div id="result"></div>
+    <div id="score"></div>
 </body>
 </html>
